[package]
authors = ["Marcus Geiger"]
description = "The gpsd_proto module contains types and functions to connect to gpsd to get GPS coordinates and satellite information."
documentation = "https://docs.rs/gpsd_proto/"
edition = "2018"
homepage = "https://github.com/bwolf/gpsd_proto.git"
keywords = ["gps"]
license = "Apache-2.0"
name = "gpsd_proto"
repository = "https://github.com/bwolf/gpsd_proto.git"
readme = "README.md"
version = "0.2.2-DEV"

[badges]
travis-ci = { repository = "bwolf/gpsd_proto" }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
itertools = "0.7"
