[package]
authors = ["Marcus Geiger"]
description = "The gpsd_proto module contains types and functions to connect to gpsd to get GPS coordinates and satellite information."
documentation = "https://docs.rs/gpsd_proto/"
edition = "2018"
homepage = "https://github.com/bwolf/gpsd_proto.git"
keywords = ["protocol", "gps"]
license = "Apache-2.0"
name = "gpsd_proto"
repository = "https://github.com/bwolf/gpsd_proto.git"
readme = "README.md"
version = "0.7.0"

[badges]
travis-ci = { repository = "bwolf/gpsd_proto" }

[features]
default = []
serialize = [] # Enable Serde Serialize for the types

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
itertools = "0.11"
env_logger = "0.10"
futures = "0.3"
tokio = { version = "1.33", features = ["rt", "macros", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
